<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txt_email">Email</string>
    <string name="txt_senha">Password</string>
    <string name="txt_senha_confirmar">Repeate Password</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_registro">REGISTER</string>
    <string name="txt_nome">Name</string>
    <string name="title_activity_teste">Teste</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_teste2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>